[package]
name = "kmoni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "parsing", "macros", "serde"] }
serde_json = "1"
